[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ankiscripts"
authors = [{ name = "Abdo", email = "abdo@abdnh.net" }]
description = "A collection of scripts to build my Anki add-ons"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = ["jsonschema>=4,<5", "questionary>=2,<3", "pip"]

[project.optional-dependencies]
dev = ["mypy", "pylint", "black", "isort", "aqt"]
qt5 = ["pyqt5"]
qt6 = ["pyqt6"]
forms = ["pyqt6"]

[tool.setuptools_scm]

[project.urls]
Repository = "https://github.com/abdnh/ankiscripts"
