[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ankiscripts"
authors = [{ name = "Abdo", email = "abdo@abdnh.net" }]
description = "A collection of scripts to build my Anki add-ons"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "jsonschema>=4,<5",
    "questionary>=2,<3",
    "libcst>=0.4.0",
    "protoletariat",
    "mypy-protobuf",
    "tomli>=2.2.1",
    "vermin>=1.6.0",
    "requests>=2.32.4",
    "types-requests>=2.32.4.20250913",
]

[project.optional-dependencies]
qt5 = ["pyqt5"]
qt6 = ["pyqt6"]
forms = ["pyqt6"]
restart-anki = ["pyinstaller", "psutil", "send2trash", "types-psutil", "types-Send2Trash"]

[dependency-groups]
dev = [
    "aqt",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-psutil",
    "types-Send2Trash",
    "types-protobuf",
    "prek>=0.3.0",
]

[tool.uv.sources]
protoletariat = { git = "https://github.com/abdnh/protoletariat", branch = "anki" }

[project.scripts]
build_anki_addon = "ankiscripts.build:main"
run_anki_addon = "ankiscripts.run:main"
update_anki_addon = "ankiscripts.update:main"

[project.urls]
Repository = "https://github.com/abdnh/ankiscripts"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "TRY"]
ignore = ["PLW0603", "PLR2004"]

[tool.ruff.lint.pylint]
max-args = 7
